Add materialize accordian to tasks.html

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -6,5 +6,18 @@
             {{task.category_name}}
             {{task.task_description}}
         {% endfor %}
-
+  <ul class="collapsible" data-collapsible="accordian">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+  </ul>
 {% endblock %}
