--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -1,7 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h3>Add Your Five</h3>
+    <h3>Add Your Five!</h3>
+    <div class="row">
+        <form action="" method="POST" class="col s12">
+            <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">pan_tool</i>
+                        <select id="category" name="category_name">
+                    <option value="" disabled selected>Choose Category</option>
+                    {% for cat in categories %}
+                        <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                    {% endfor %}
+                    </select>
+                        <label>Category</label>
+                    </div>
+                </div>
+            <div class="row">
+                <div class="input-field col s12">
+                <i class="material-icons prefix">face</i>
+                <input id="task_name" name="Task_name" type="text" class="validate">
+                <label for="icon_prefix">My Fav Five</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                <i class="material-icons prefix">create</i>
+                <textarea name="task_description" id="task_description" class="materialize-textarea"></textarea>
+                <label for="icon_telephone">5 songs</label>
+                </div>
+            </div>      
+        </form>
+    </div>
 
 
 
