--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -1,35 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-
     <h3>Add Your Five!</h3>
     <div class="row">
-        <form action="" method="POST" class="col s12">
-            <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">pan_tool</i>
-                        <select id="category" name="category_name">
-                    <option value="" disabled selected>Choose Category</option>
-                    {% for cat in categories %}
-                        <option value="{{cat.category_name}}">{{cat.category_name}}</option>
-                    {% endfor %}
-                    </select>
-                        <label>Category</label>
+        <form action="{{ url_for('insert_task') }}" method="POST" class="col s12">
+            <div class=row">
+                <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">pan_tool</i>
+                            <select id="category" name="category_name">
+                                <option value="" disabled selected>Choose Category</option>
+                                {% for cat in categories %}
+                                <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                                {% endfor %}
+                            </select>
+                            <label>Category</label>
+                        </div>
                     </div>
-                </div>
             <div class="row">
                 <div class="input-field col s12">
-                <i class="material-icons prefix">face</i>
-                <input id="task_name" name="Task_name" type="text" class="validate">
-                <label for="icon_prefix">My Fav Five</label>
+                    <i class="material-icons prefix">face</i>
+                    <input id="task_name" name="task_name" type="text" class="validate">
+                    <label for="icon_prefix">My Fav Five</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                 <i class="material-icons prefix">create</i>
                 <textarea name="task_description" id="task_description" class="materialize-textarea"></textarea>
-                <label for="icon_telephone">5 songs</label>
+                <label for="icon_telephone">Add your 5 here</label>
                 </div>
-            </div>      
+            </div> 
+            <div class="row">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Add to Five!
+                <i class="material-icons right">add</i>
+            </button>  
+            </div>   
         </form>
     </div>
 
