--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,13 +4,13 @@
   <ul class="collapsible" data-collapsible="accordian">
     {% for task in tasks %}
         <li>
-        <div class="collapsible-header"><i class="material-icons">pan_tool</i>
-        {{task.task_name}}
+        <div class="collapsible-header"><i class="material-icons">expand_more</i>
+            <strong>{{task.task_name}}</strong>
         </div>
         <div class="collapsible-body">
             <span>{{task.task_description}}
             </span>
-            </div>
+         </div>        
         </li>
     {% endfor %}
   </ul>
