--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,12 @@
-/*styling done and edit buttons*/
+/* styling done and edit buttons */
 
 .btn_small {
     height: 24px;
     width: 60px;
     line-height: 24px;
     padding: 0 0.5em;
+}
+
+.task_header {
+    margin-top: 5px;
 }
