--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,10 @@
 <body>
 
     <!----jinja block---->
+    <div class="container">
     {% block content%}
     {% endblock %}
-
+    </div>
     <!----javascript/jquery---->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
