--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,17 +1,26 @@
-{% extends 'base.html' %}
-{% block content %}
-        
-  <ul class="collapsible" data-collapsible="accordian">
-    {% for task in tasks %}
+{% extends 'base.html'%} {% block content %}
+<div class="row">
+    <ul class="collapsible" data-collapsible="accordion">
+        {% for task in tasks %}
         <li>
-        <div class="collapsible-header"><i class="material-icons">expand_more</i>
-            <strong>{{task.task_name}}</strong>
-        </div>
-        <div class="collapsible-body">
-            <span>{{task.task_description}}
+            <div class="collapsible-header">
+                            <div class="task_header col s9">
+                            <i class="material-icons">expand_more</i>
+                    <strong>{{task.task_name}}</strong>
+                </div>
+                <div class="col s3">
+                    <a class="waves-effect waves-light btn btn_small">Done</a>
+                    <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+                    
+                </div>
+            </div>
+            <div class="collapsible-body">
+                <span>
+                {{task.task_description}} 
             </span>
-         </div>        
+            </div>
         </li>
-    {% endfor %}
-  </ul>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
