--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -9,7 +9,7 @@
                     <strong>{{task.task_name}}</strong>
                 </div>
                 <div class="col s3">
-                    <a class="waves-effect waves-light btn btn_small">Done</a>
+                    <a href="{{url_for('delete_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
                     <a href="{{url_for('edit_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                     
                 </div>
