--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,12 @@
     height: 24px;
     width: 60px;
     line-height: 24px;
-    padding: 0 0.5em;
+}
+
+.waves-effect {
+    padding: unset;
+    width: 70px;
+    margin: 5px;
 }
 
 .task_header {
