--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -12,12 +12,8 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Save Changes
-                <i class="material-icons right">playlist_add</i>
-             </button>
-            <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn grey">
-                <i class="material-icons right">cancel</i>Cancel
-            </a>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Save Changes<i class="material-icons right">add</i>
+            </button>
         </div>
     </form>
 </div>
