--- a/templates/categories.html
+++ b/templates/categories.html
@@ -10,8 +10,8 @@
                 <div class="task_header col s9">
                     <strong>{{category.category_name}}</strong>
                 </div>
-                <a href="" class="waves-effect waves-light btn btn_small blue">Edit</a>
-                <a href="{{url_for('edit_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
+                <a href="{{url_for('edit_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
+                <a href="{{url_for('delete_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small">Del</a>
             </div>
         </li>
         {% endfor %}
