--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,31 @@
     <title>Five!</title>
 </head>
 <body>
+<!----Navbar--->
+    <header>
+            <nav>
+            <div class="nav-wrapper">
+            <a href="{{ url_for('get_tasks') }}" class="brand-logo">Five Alive!</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            </ul>
+             <ul class="side-nav" id="mobile-demo">
+                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            </ul
+            </div>
+        </nav>
+    </header>
+    
 
-    <!----jinja block---->
+<!----jinja block---->
     <div class="container">
     {% block content%}
     {% endblock %}
     </div>
-    <!----javascript/jquery---->
+<!----javascript/jquery---->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript">
