Rework of Navbars

--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -31,8 +31,7 @@
                 </div>
             </div> 
             <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add to Five!
-                <i class="material-icons right">add</i>
+            <button class="btn waves-effect waves-light" type="submit" name="action"><i class="material-icons right">add</i>Add to Five!
             </button>  
             </div>   
         </form>
