--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <header>
             <nav>
             <div class="nav-wrapper">
-            <a href="{{ url_for('get_tasks') }}" class="brand-logo">Five Alive!</a>
+            <a href="{{ url_for('get_categories') }}" class="brand-logo">Five Alive!</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
@@ -22,6 +22,7 @@
             </ul>
              <ul class="side-nav" id="mobile-demo">
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                <li><a href="{{ url_for('add_task') }}">Add new 5</a></li>
                 <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
             </ul
             </div>
