--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,9 @@
 
 .btn_small {
     height: 24px;
-    width: 60px;
     line-height: 24px;
-}
-
-.waves-effect {
-    padding: unset;
-    width: 70px;
-    margin: 5px;
+    margin: 5px 5px;
+    padding: 0 0.5em;
 }
 
 .task_header {
