--- a/templates/categories.html
+++ b/templates/categories.html
@@ -11,7 +11,7 @@
                     <strong>{{category.category_name}}</strong>
                 </div>
                 <a href="{{url_for('edit_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
-                <a href="{{url_for('delete_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small">Del</a>
+                <a href="{{url_for('delete_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
             </div>
         </li>
         {% endfor %}
