Editing Navbar and Footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-/* styling done and edit buttons */
+/* styling buttons */
 
 .btn_small {
     height: 24px;
@@ -7,6 +7,5 @@
     padding: 0 0.5em;
 }
 
-.task_header {
-    margin-top: 5px;
-}
+
+
