--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css" />
     <title>Five!</title>
 </head>
@@ -13,18 +14,19 @@
 <!----Navbar--->
     <header>
             <nav>
-            <div class="nav-wrapper">
-            <a href="{{ url_for('get_categories') }}" class="brand-logo">Five Alive!</a>
+            <div class="nav-wrapper blue-grey lighten-5">
+            <a href="{{ url_for('get_categories') }}" class="brand-logo"><span class="orange-text"><i class="material-icons">pan_tool</i>FIVE</span></a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                <li><a href="{{ url_for('get_tasks') }}"><span class="orange-text">Categories</span></a></li>
+                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Login</span></a></li>
+                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Sign up</span></a></li>
             </ul>
              <ul class="side-nav" id="mobile-demo">
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
                 <li><a href="{{ url_for('add_task') }}">Add new 5</a></li>
                 <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
-            </ul
+            </ul>
             </div>
         </nav>
     </header>
@@ -35,6 +37,15 @@
     {% block content%}
     {% endblock %}
     </div>
+<!----footer---->
+        <footer class="page-footer blue-grey lighten-5">
+          <div class="footer-copyright blue-grey lighten-5">
+            <div class="container">
+            <span class="orange-text">© 2020 FIVE</span>
+            <a class="grey-text text-lighten-4 right" href="#!"><span class="orange-text"><i class="fa fa-twitter"><i class="fab fa-facebook-f"></i></i></span></a>
+            </div>
+          </div>
+        </footer>
 <!----javascript/jquery---->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
