--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+/** navbar **/
+.brand-logo {
+    margin-left: 10px;
+}
+
 /* styling buttons */
 
 .btn_small {
@@ -6,6 +11,12 @@
     margin: 5px 5px;
     padding: 0 0.5em;
 }
+
+/***icons***/
+.fa-hand-holding-heart {
+    color: #f67138;
+}
+
 
 
 
