--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <nav>
             <div class="nav-wrapper blue-grey lighten-5">
             <a href="{{ url_for('get_categories') }}" class="brand-logo"><span class="orange-text"><i class="material-icons">pan_tool</i>FIVE</span></a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons"><span class="orange-text">menu</span></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_tasks') }}"><span class="orange-text">Categories</span></a></li>
                 <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Login</span></a></li>
