Added content to index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,9 +12,10 @@
     padding: 0 0.5em;
 }
 
-/***icons***/
-.fa-hand-holding-heart {
-    color: #f67138;
+/***index-page***/
+.index-bg {
+    background-color: #f67138;
+    margin: 20px;
 }
 
 
