--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,14 @@
     {% block content%}
     {% endblock %}
     </div>
+
 <!----footer---->
-        <footer class="page-footer blue-grey lighten-5">
-          <div class="footer-copyright blue-grey lighten-5">
+        <footer class="page-footer white">
+          <div class="footer-copyright indigo">
             <div class="container">
-            <span class="orange-text">© 2020 FIVE</span>
-            <a class="grey-text text-lighten-4 right" href="#!"><span class="orange-text"><i class="fa fa-twitter"><i class="fab fa-facebook-f"></i></i></span></a>
+            <span class="white-text">© 2020 FIVE</span><br>
+            <a class="right white-text" href="#!"><i class="fa fa-twitter"></i><i class="fa fa-facebook-f"></i></a>
+            
             </div>
           </div>
         </footer>
