--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="center-align index-btn">
-            <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to 5 now</a>
+            <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to 5 now</a>
         </div>
         
     </div>
