--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons"><span class="orange-text">menu</span></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_tasks') }}"><span class="orange-text">Categories</span></a></li>
-                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Login</span></a></li>
-                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Sign up</span></a></li>
+                <li><a href="{{ url_for('get_login') }}"><span class="orange-text">Login</span></a></li>
+                <li><a href="{{ url_for('get_login') }}"><span class="orange-text">Sign up</span></a></li>
             </ul>
              <ul class="side-nav" id="mobile-demo">
                 <li><a href="{{ url_for('get_index') }}">Home</a></li>
