Create About page

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_tasks') }}"><span class="orange-text">Categories</span></a></li>
                 <li><a href="{{ url_for('get_login') }}"><span class="orange-text">Login</span></a></li>
-                <li><a href="{{ url_for('get_login') }}"><span class="orange-text">Sign up</span></a></li>
+                <li><a href="{{ url_for('get_register') }}"><span class="orange-text">Sign up</span></a></li>
             </ul>
              <ul class="side-nav" id="mobile-demo">
                 <li><a href="{{ url_for('get_index') }}">Home</a></li>
@@ -39,15 +39,7 @@
     </div>
 
 <!----footer---->
-        <footer class="page-footer white">
-          <div class="footer-copyright indigo">
-            <div class="container">
-            <span class="white-text">© 2020 FIVE</span><br>
-            <a class="right white-text" href="#!"><i class="fa fa-twitter"></i><i class="fa fa-facebook-f"></i></a>
-            
-            </div>
-          </div>
-        </footer>
+
 <!----javascript/jquery---->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
