--- a/templates/random.html
+++ b/templates/random.html
@@ -6,7 +6,7 @@
         <div class="row">
                 <div class="center-align index-bg">
                     <span class="indigo-text"><i class="medium material-icons stars">stars</i></span>
-                    <h1 class="index-header"><span class="white-text">About FIVE!</span></h1>
+                    <h1 class="index-header"><span class="white-text">Random</span></h1>
                     <p><span class="white-text">a simple app to help relieve <br>stress and anxiety in <br>5 simple steps.</span></p>
                 </div>
         </div>
