--- a/templates/random.html
+++ b/templates/random.html
@@ -8,13 +8,10 @@
                 <h4 class="random-header"><span class="white-text">Random Acts of Mindfullness!</span></h4>
             </div>
             <div class="center-align random-text">
+                <h5>Browse through our RAMs</h5>
                 <img src="static/img/ram-emoji.png" alt="" class=" responsive-img">
-                <p>Browse through our RAMs - Random Acts of Mindfullness.</p>
-                <p> Test them out, see what you like and dont like.</p>
+                <p>(Random Acts of Mindfullness)</p>               
             </div>
-        </div>
-        <div class="center-align index-btn">
-            <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own RAM!</a>
         </div>
     </div>
 
@@ -24,36 +21,43 @@
 
         <div id="random-tasks" class="row flex">
             <div class="col l6 xl4">
-                <div class="card large">
+                <div class="card medium">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/owl.png" alt="cartoon owl">
                         </div>
-                        <span class="card-title center-align ">5 Senses</span>
+                        <span class="card-title center-align">5 Senses</span>
                     </div>
                     <div class="card-content">
-                        <p> 5 things you see, 4 things you hear, 3 things you smell, 2 things you can touch, 1 thing you taste</p>
+                        <p><span class="number">5 </span>things you see </p>
+                        <p><span class="number">4.  </span>things you hear </p>
+                        <p><span class="number">3.  </span>things you smell </p>
+                        <p><span class="number">2.  </span>things you can touch</p>
+                        <p><span class="number">1.  </span>thing you taste </p>
                     </div>
                 </div>
             </div>
 
-            <!-- Macro generated card to display entry -->
             <div class="col l6 xl4">
-                <div class="card large">
+                <div class="card medium">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/penguin.png" alt="Poster for Avengers: Endgame">
                         </div>
-                        <span class="card-title">5 Sights</span>
+                        <span class="card-title center-align">5 Sights</span>
                     </div>
                     <div class="card-content">
-                        <p> 5 colors I see, 4 shapes I see, 3 soft things I see, 2 people I see, 1 book I see</p>
+                        <p><span class="number">5 </span>colors </p>
+                        <p><span class="number">4.  </span>shapes </p>
+                        <p><span class="number">3.  </span>soft things </p>
+                        <p><span class="number">2.  </span>people</p>
+                        <p><span class="number">1.  </span>book </p>
                     </div>
                 </div>
             </div>
 
             <div class="col l6 xl4">
-                <div class="card large">
+                <div class="card medium">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/bunny.png" alt="Poster for Abominable">
@@ -61,12 +65,24 @@
                         <span class="card-title">5 fun Facts about Rabbits!</span>
                     </div>
                     <div class="card-content">
-                        <p>A female rabbit is called a doe.A male rabbit is called a buck.A young rabbit is called a kit (or kitten).Rabbits have a lifespan of around 10 years.Rabbits have long ears which can be as long as 10 cm (4 in)</p>
+      <p><span class="number">1.  </span>A female rabbit is called a doe</p>
+      <p><span class="number">2.  </span>A male rabbit is called a buck</p>
+      <p><span class="number">3.  </span>A baby rabbit is called a kit or kitten</p>
+      <p><span class="number">4.  </span>Live for up to 10 years</p>
+      <p><span class="number">5.  </span>Ears as long as a pencil</p>
                     </div>
                 </div>
             </div>
 
         </div>
+    </div>
+
+<div class="center-align">
+    <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more!</a>
+</div>
+<div class="center-align random-btn">
+    <h5 class="random-add">Have a favourite 5 of your own? Why not add to our collection.</h5>
+    <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own RAM!</a>
     </div>
 
 </section>
