Create add_ram.html file

--- a/templates/add_ram.html
+++ b/templates/add_ram.html
@@ -5,10 +5,10 @@
     <div class="container random">
         <div class="row">
             <div class="center-align index-bg">
-                <h4 class="random-header"><span class="white-text">Random Acts of Mindfullness!</span></h4>
+                <h4 class="random-header"><span class="white-text">Add your RAM!</span></h4>
             </div>
             <div class="center-align random-text">
-                <h5>Browse through our RAMs</h5>
+                <h5>Add your favourite 5, whether its exercises, actions, fun facts, stupid things. 5 things that always make you smile</h5>
                 <img src="static/img/ram-emoji.png" alt="" class=" responsive-img">
                 <p>(Random Acts of Mindfullness)</p>
             </div>
