--- a/templates/random.html
+++ b/templates/random.html
@@ -9,7 +9,7 @@
             </div>
             <div class="center-align random-text">
                 <h5>Browse through our RAMs</h5>
-                <img src="static/img/ram-emoji.png" alt="" class=" responsive-img">
+                <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class=" responsive-img">
                 <p>(Random Acts of Mindfullness)</p>
             </div>
         </div>
@@ -81,8 +81,8 @@
         <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more!</a>
     </div>
     <div class="center-align random-btn">
-        <h5 class="random-add">Have a favourite 5 of your own? Why not add to our collection.</h5>
-        <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own RAM</a>
+        <h5 class="random-add">Have a fav 5 of your own? Why not add to our collection.</h5>
+        <a href="{{ url_for('add_ram') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own RAM</a>
     </div>
 
 </section>
