--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,24 @@
                     <p><span class="white-text">a simple app to help relieve <br>stress and anxiety in <br>5 simple steps.</span></p>
                 </div>
         </div>
+            <div class="center-align">
+            <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
+        </div>
 
         <div class="center-align index-btn">
             <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to 5 now</a>
         </div>
+
         
     </div>
 
 </section>
+
+        <footer class="page-footer white">
+          <div class="footer-copyright">
+            <div class="container orange-text center-align">
+            © 2020 FIVE 
+            </div>
+        </footer>
 
 {% endblock %}
