--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -3,7 +3,7 @@
     <h3>Add Your Five!</h3>
     <div class="row">
         <form action="{{ url_for('insert_task') }}" method="POST" class="col s12">
-            <div class=row">
+            <div class="row">
                 <div class="row">
                         <div class="input-field col s12">
                             <i class="material-icons prefix">pan_tool</i>
@@ -33,7 +33,8 @@
             <div class="row">
             <button class="btn waves-effect waves-light" type="submit" name="action"><i class="material-icons right">add</i>Add to Five!
             </button>  
-            </div>   
+            </div>
+            </div>
         </form>
     </div>
 
