--- a/templates/add_ram.html
+++ b/templates/add_ram.html
@@ -33,7 +33,7 @@
                                 <option value="{{cat.category_name}}">{{cat.category_name}}</option>
                                 {% endif %} {% endfor %}
                             </select>
-                            <label>Task Category</label>
+                            <label>Category</label>
                         </div>
                     </div>
                     <div class="row">
