--- a/templates/add_ram.html
+++ b/templates/add_ram.html
@@ -8,7 +8,7 @@
                 <h4 class="random-header"><span class="white-text">Add your FIVE!</span></h4>
             </div>
             <div class="random-text">
-                <h5>Add your favourite 5 RAMs, whether its exercises, actions, fun facts, stupid things</h5>
+                <h5>Add your favourite RAMs, whether its exercises, actions, fun facts, stupid things.</h5>
                 <br>
                 <h6><span class="orange-text"><i class="material-icons prefix">star_border</i> things that always make you smile<i class="material-icons prefix">star_border</i></span></h6>
                 <br>
@@ -20,6 +20,7 @@
     </div>
     <!--add your ram section -->
     <div class="container">
+        <p class="center-align random-cat">Pick a category you want to add to, add a name, <br> then add your Fav 5!</p>
         <div class="row center-align">
             <form action="{{ url_for('insert_task') }}" method="POST" class="col s12">
                 <div class="row">
