--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a href="{{ url_for('get_index') }}" class="brand-logo"><span class="orange-text"><i class="material-icons">pan_tool</i>FIVE</span></a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons"><span class="orange-text">menu</span></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('random') }}"><span class="orange-text">Random</span></a></li>
+                <li><a href="{{ url_for('random') }}"><span class="orange-text">Random 5</span></a></li>
                 <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Categories</span></a></li>
                 <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
 
