--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="center-align index-btn">
-            <a href="{{ url_for('get_categories') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to a 5</a>
+            <a href="{{ url_for('random') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Take me to a 5</a>
         </div>
 
         
@@ -28,6 +28,7 @@
             <div class="container orange-text center-align">
             © 2020 FIVE 
             </div>
+          </div>
         </footer>
 
 {% endblock %}
