--- a/templates/add_ram.html
+++ b/templates/add_ram.html
@@ -20,7 +20,7 @@
     </div>
     <!--add your ram section -->
     <div class="container">
-        <p class="center-align random-cat">Pick a category you want to add to, add a name, <br> then add your Fav 5!</p>
+        <p class="center-align random-cat">Select a Category you want to add to, add a Name, then add your Fav 5!</p>
         <div class="row center-align">
             <form action="{{ url_for('insert_task') }}" method="POST" class="col s12">
                 <div class="row">
@@ -57,6 +57,7 @@
                     </div>
                 </div>
             </form>
+            <p>(Hey, don't worry about making a mistake , you can easily edit after)</p>
         </div>
     </div>
 </section>
