--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
+<section>
 <h3>Add Category</h3>
 <div class="row">
     <form action="{{ url_for('insert_category' }}" method="POST" class="col s12">
@@ -17,4 +18,5 @@
         </div>
     </form>
 </div>
+</section>
 {% endblock %}
