--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,16 @@
             <a href="{{ url_for('get_index') }}" class="brand-logo"><span class="orange-text"><i class="material-icons">pan_tool</i>FIVE</span></a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons"><span class="orange-text">menu</span></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('random') }}"><span class="orange-text">Random 5</span></a></li>
-                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Categories</span></a></li>
+                <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
+                <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
+                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add Category</span></a></li>
                 <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
 
             </ul>
              <ul class="side-nav" id="mobile-demo">
                 <li><a href="{{ url_for('get_index') }}">Home</a></li>
-                <li><a href="{{ url_for('add_task') }}">Add new 5</a></li>
+                <li><a href="{{ url_for('random') }}">RAM</a></li>
+                <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
                 <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
             </ul>
             </div>
