--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,7 +2,17 @@
 {% block content %}
 
 <div class="row">
-    <h3>Categories</h3>
+    <!--category heading section -->
+    <div class="container random">
+        <div class="row center-align">
+            <div class="index-bg">
+                <h4 class="random-header"><span class="white-text">Categories</span></h4>
+            </div>
+            <div class="cat_text">
+                <h5>You can add your own Category or edit one that is already here</h5>
+            </div>
+        </div>
+    </div>
     <ul class="collapsible" data-collapsible="accordion">
         {% for category in categories %}
         <li>
@@ -17,9 +27,17 @@
         {% endfor %}
     </ul>
 </div>
-<div class="row">
+<div class="row center-align">
     <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn">
         <i class="material-icons right">add</i>Add Category
     </a>
+</div>
+<div class="center-align">
+    <div>
+        <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
+    </div>
+                    <br>
+                <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you smile<i class="material-icons prefix">star_border</i></span></h6>
+                <br>
 </div>
 {% endblock %}
