Add css animation to cards on RAM page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,12 @@ body {
     padding-bottom: 20px;
 }
 
+.grow:hover {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+}
+
 /***category.html***/
 .cat_text {
     padding: 20px;
