--- a/templates/random.html
+++ b/templates/random.html
@@ -24,7 +24,7 @@
 
         <div id="random-tasks" class="row flex">
             <div class="col l6 xl4">
-                <div class="card medium">
+                <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/owl.png" alt="cartoon owl">
@@ -42,7 +42,7 @@
             </div>
 
             <div class="col l6 xl4">
-                <div class="card medium">
+                <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/penguin.png" alt="Poster for Avengers: Endgame">
@@ -60,7 +60,7 @@
             </div>
 
             <div class="col l6 xl4">
-                <div class="card medium">
+                <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
                             <img class="responsive-img" src="static/img/bunny.png" alt="Poster for Abominable">
