Index page validated and formatted

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -37,7 +37,7 @@
         <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
     </div>
                     <br>
-                <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you smile<i class="material-icons prefix">star_border</i></span></h6>
+                <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you hmmm hmmm hmmm<i class="material-icons prefix">star_border</i></span></h6>
                 <br>
 </div>
 {% endblock %}
